# jetson-nano-sensor-gateway

./: Cargo.toml  test_ethernet.c
derive/: Cargo.toml
derive/src/: lib.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: comms.rs  lib.rs  main.rs  protocol.rs
