[workspace]
members = ["impl", "derive"]
default-members = [".", "impl", "derive"]

[workspace.package]
version = "0.0.1"
edition = "2021"


[package]
name = "sb_ctrl_bridge"
version.workspace = true
edition.workspace = true

[dependencies]
sb_ctrl_bridge_impl = { path = "impl" }
sb_ctrl_bridge_derive = { path = "derive" }

nix = { version = "0.29.0", features = ["net", "socket", "ioctl"] }

